--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Port=3306;Database=simpleCrud;Uid=root;Pwd=password;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
